<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example</groupId>
  <artifactId>spring-boot-basic</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>

  <name>Spring Boot Basic Project</name>
  <description>A simple Spring Boot web application</description>

  <!-- for dependency management, compatible library version (hence we don't specify versions for
  most dependencies), maven defaulrs, etc -->
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.16</version>
    <relativePath /> <!-- lookup parent from repository -->
  </parent>

  <properties>
    <java.version>21</java.version>
    <spring-boot.report.suppress-oss-warnings>true</spring-boot.report.suppress-oss-warnings>
    <app.server.port>8181</app.server.port>
  </properties>

  <!--
      ==============================================
      Spring Boot Starter Cheat Sheet

      spring-boot-starter-web
          MVC + Jackson + Tomcat

      spring-boot-starter-validation
          Bean Validation

      spring-boot-starter-data-jpa
          Hibernate + Spring Data

      spring-boot-starter-security
          Spring Security

      spring-boot-starter-aop
          AspectJ support

      ==============================================
  -->
  <dependencies>
    <!-- Spring Boot Web Starter -->
    <!-- 
      Gives 
        -Spring MVC(@RestController, @RequestMapping, ResponseEntity), 
        -Jackson, 
        -Tomcat,
        -Validation integration, 
        -Logging infrastructure 
    -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <!-- Spring Data JPA -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>

    <!-- H2 in-memory database for development -->
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>runtime</scope>
    </dependency>

    <!--
        Jakarta Bean Validation (Hibernate Validator implementation)

        Provides:
        @Valid
        @NotNull
        @NotBlank
        @Positive
        @Size
        and custom validators
    -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <!-- Spring Boot DevTools (optional, for development) -->
    <!--
        Development only.
        Provides:
          - Automatic restart
          - LiveReload
          - Faster development
    -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>

    <!-- Spring Boot Test Starter -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- without this, user("admin") wouldn't work in MockMvc tests -->
    <!-- Provides Spring Security testing support such as:

          user(...)
          csrf()
          jwt()

        and security assertions. 
    -->

    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Springdoc OpenAPI (Swagger UI) -->
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>2.7.0</version>
    </dependency>

    <!--
        Aspect-Oriented Programming.

        Enables: @Aspect

        Cross-cutting concerns such as:
        - logging
        - timing
        - auditing
        - security
    -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-aop</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>

    <!--
        Database versioning and migrations.

        Preferred over ddl-auto=create/update
        for production systems.
    -->
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
    </dependency>

    <!-- JWT API -->
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-api</artifactId>
      <version>0.12.5</version>
    </dependency>

    <!-- JWT Implementation (Runtime only) -->
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-impl</artifactId>
      <version>0.12.5</version>
      <scope>runtime</scope>
    </dependency>

    <!-- JSON parser integration (Jackson is standard for Spring Boot) -->
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-jackson</artifactId>
      <version>0.12.5</version>
      <scope>runtime</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <arguments>
            <argument>--server.port=${app.server.port}</argument>
          </arguments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.5.6</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <includes>
            <include>**/*IT.java</include>
            <include>**/*ITCase.java</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.43.0</version>
        <configuration>
          <!-- only format files that differ from the main branch -->
          <ratchetFrom>main</ratchetFrom>
          <java>
            <googleJavaFormat />
          </java>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.12</version> <!-- Use the latest stable version -->
        <executions>
          <!-- Prepares the property pointing to the JaCoCo runtime agent -->
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <!-- Ensures the report is generated after tests run -->
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <!--
    Development profile

    Activated using

    mvn spring-boot:run -Pdev-run
  -->
  <profiles>
    <profile>
      <id>dev-run</id>
      <properties>
        <spring-boot.run.profiles>dev</spring-boot.run.profiles>
        <spring-boot.run.fork>false</spring-boot.run.fork>
      </properties>
    </profile>
    <profile>
      <id>jwt-run</id>
      <properties>
        <spring-boot.run.profiles>jwt</spring-boot.run.profiles>
        <spring-boot.run.fork>false</spring-boot.run.fork>
      </properties>
    </profile>
    <profile>
      <id>jwt-schema-validate-run</id>
      <properties>
        <spring-boot.run.profiles>jwt,schema-validate</spring-boot.run.profiles>
        <spring-boot.run.fork>false</spring-boot.run.fork>
      </properties>
    </profile>
  </profiles>
</project>